--- a/playpen/examples/sierpinski/sierpinski_csound_qt.ui
+++ b/playpen/examples/sierpinski/sierpinski_csound_qt.ui
@@ -1,120 +1,116 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog">
+ <class>MainWindow</class>
+ <widget class="QMainWindow" name="MainWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>416</width>
-    <height>296</height>
+    <width>800</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>MainWindow</string>
   </property>
-  <widget class="QPushButton" name="play_button">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>260</y>
-     <width>89</width>
-     <height>25</height>
-    </rect>
+  <widget class="QWidget" name="centralwidget">
+   <widget class="QWidget" name="gridLayoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>10</y>
+      <width>391</width>
+      <height>231</height>
+     </rect>
+    </property>
+    <layout class="QGridLayout" name="gridLayout">
+     <item row="0" column="1">
+      <widget class="QSlider" name="gk_Reverb_feedback">
+       <property name="toolTip">
+        <string extracomment="csound"/>
+       </property>
+       <property name="maximum">
+        <number>100</number>
+       </property>
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="0">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>gk_Reverb_feedback</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="2">
+      <widget class="QLineEdit" name="gk_Reverb_feedback_value"/>
+     </item>
+    </layout>
+   </widget>
+  </widget>
+  <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
    </property>
+   <property name="movable">
+    <bool>false</bool>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionPlay"/>
+   <addaction name="actionRender"/>
+   <addaction name="actionStop"/>
+   <addaction name="actionSave"/>
+   <addaction name="actionRestore"/>
+  </widget>
+  <action name="actionPlay">
    <property name="text">
     <string>Play</string>
    </property>
-  </widget>
-  <widget class="QPushButton" name="stop_button">
-   <property name="geometry">
-    <rect>
-     <x>110</x>
-     <y>260</y>
-     <width>89</width>
-     <height>25</height>
-    </rect>
+   <property name="toolTip">
+    <string>Play audio</string>
    </property>
+  </action>
+  <action name="actionRender">
+   <property name="text">
+    <string>Render</string>
+   </property>
+   <property name="toolTip">
+    <string>Render to soundfile, post-process, and play</string>
+   </property>
+  </action>
+  <action name="actionStop">
    <property name="text">
     <string>Stop</string>
    </property>
-  </widget>
-  <widget class="QPushButton" name="save_button">
-   <property name="geometry">
-    <rect>
-     <x>210</x>
-     <y>260</y>
-     <width>89</width>
-     <height>25</height>
-    </rect>
+   <property name="toolTip">
+    <string>Stop performance</string>
    </property>
+  </action>
+  <action name="actionSave">
    <property name="text">
     <string>Save</string>
    </property>
-  </widget>
-  <widget class="QPushButton" name="restore_button">
-   <property name="geometry">
-    <rect>
-     <x>310</x>
-     <y>260</y>
-     <width>89</width>
-     <height>25</height>
-    </rect>
+   <property name="toolTip">
+    <string>Save channel values</string>
    </property>
+  </action>
+  <action name="actionRestore">
    <property name="text">
     <string>Restore</string>
    </property>
-  </widget>
-  <widget class="QWidget" name="gridLayoutWidget">
-   <property name="geometry">
-    <rect>
-     <x>9</x>
-     <y>9</y>
-     <width>391</width>
-     <height>231</height>
-    </rect>
+   <property name="toolTip">
+    <string>Restore saved channel values</string>
    </property>
-   <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="1">
-     <widget class="QSlider" name="gk_Reverb_feedback">
-      <property name="maximum">
-       <number>100</number>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="0">
-     <widget class="QLabel" name="label">
-      <property name="text">
-       <string>gk_Reverb_feedback</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="2">
-     <widget class="QLineEdit" name="gk_Reverb_feedback_value"/>
-    </item>
-   </layout>
-  </widget>
+  </action>
  </widget>
  <resources/>
- <connections>
-  <connection>
-   <sender>gk_Reverb_feedback</sender>
-   <signal>valueChanged(int)</signal>
-   <receiver>gk_Reverb_feedback_value</receiver>
-   <slot>update()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>204</x>
-     <y>124</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>327</x>
-     <y>124</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
