--- a/playpen/examples/sierpinski/sierpinski_csound_qt.ui
+++ b/playpen/examples/sierpinski/sierpinski_csound_qt.ui
@@ -135,8 +135,11 @@
        <property name="toolTip">
         <string extracomment="csound"/>
        </property>
+       <property name="minimum">
+        <number>-5000</number>
+       </property>
        <property name="maximum">
-        <number>100</number>
+        <number>5000</number>
        </property>
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -184,7 +187,7 @@
       <number>5</number>
      </property>
      <item row="0" column="1">
-      <widget class="QSlider" name="gk_Reverb_delay_modulation">
+      <widget class="QSlider" name="gi_Reverb_delay_modulation">
        <property name="toolTip">
         <string extracomment="csound"/>
        </property>
@@ -275,7 +278,7 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QSlider" name="gk_Harpsichord_pluck">
+      <widget class="QSlider" name="gi_Harpsichord_pluck">
        <property name="toolTip">
         <string extracomment="csound"/>
        </property>
@@ -328,7 +331,7 @@
       <number>5</number>
      </property>
      <item row="0" column="1">
-      <widget class="QSlider" name="gk_Harpsichord_release">
+      <widget class="QSlider" name="gi_Harpsichord_release">
        <property name="toolTip">
         <string extracomment="csound"/>
        </property>
@@ -476,8 +479,11 @@
        <property name="toolTip">
         <string extracomment="csound"/>
        </property>
+       <property name="minimum">
+        <number>-5000</number>
+       </property>
        <property name="maximum">
-        <number>100</number>
+        <number>5000</number>
        </property>
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -759,7 +765,7 @@
    </hints>
   </connection>
   <connection>
-   <sender>gk_Reverb_delay_modulation</sender>
+   <sender>gi_Reverb_delay_modulation</sender>
    <signal>valueChanged(int)</signal>
    <receiver>gk_Reverb_delay_modulation_value</receiver>
    <slot>setNum(int)</slot>
@@ -839,7 +845,7 @@
    </hints>
   </connection>
   <connection>
-   <sender>gk_Harpsichord_pluck</sender>
+   <sender>gi_Harpsichord_pluck</sender>
    <signal>valueChanged(int)</signal>
    <receiver>gk_Harpsichord_pluck_value</receiver>
    <slot>setNum(int)</slot>
@@ -855,7 +861,7 @@
    </hints>
   </connection>
   <connection>
-   <sender>gk_Harpsichord_release</sender>
+   <sender>gi_Harpsichord_release</sender>
    <signal>valueChanged(int)</signal>
    <receiver>gk_Harpsichord_release_value</receiver>
    <slot>setNum(int)</slot>
