--- a/playpen/examples/sierpinski/sierpinski-csound-gtk.ui
+++ b/playpen/examples/sierpinski/sierpinski-csound-gtk.ui
@@ -50,14 +50,15 @@
     <property name="step_increment">0.10000000000000001</property>
     <property name="page_increment">10</property>
   </object>
-  <object class="GtkApplicationWindow" id="main_window">
+  <object class="GtkWindow" id="main_window">
+    <property name="name">main_window</property>
     <property name="can_focus">False</property>
     <child type="titlebar">
       <placeholder/>
     </child>
     <child>
-      <object class="GtkGrid" id="user_controls_layout">
-        <property name="name">user_controls_layout</property>
+      <object class="GtkGrid" id="main_window_layout">
+        <property name="name">main_window_layout</property>
         <property name="width_request">800</property>
         <property name="height_request">400</property>
         <property name="visible">True</property>
@@ -73,11 +74,10 @@
         <property name="column_spacing">10</property>
         <child>
           <object class="GtkLabel">
-            <property name="name">gk_MasterOutput_level</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="halign">start</property>
-            <property name="label" translatable="yes">gk_MasterOutput_level</property>
+            <property name="label" translatable="yes">Master output level</property>
           </object>
           <packing>
             <property name="left_attach">0</property>
@@ -118,11 +118,10 @@
         </child>
         <child>
           <object class="GtkLabel">
-            <property name="name">gk_Reverb_feedback</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="halign">start</property>
-            <property name="label" translatable="yes">gk_Reverb_feedback</property>
+            <property name="label" translatable="yes">Reverb feedback</property>
           </object>
           <packing>
             <property name="left_attach">0</property>
@@ -163,11 +162,10 @@
         </child>
         <child>
           <object class="GtkLabel">
-            <property name="name">gk_Harpsichord_release</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="halign">start</property>
-            <property name="label" translatable="yes">gk_Harpsichord_release</property>
+            <property name="label" translatable="yes">Harpsichord release</property>
           </object>
           <packing>
             <property name="left_attach">0</property>
@@ -176,11 +174,10 @@
         </child>
         <child>
           <object class="GtkLabel">
-            <property name="name">gk_Harpsichord_pick</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="halign">start</property>
-            <property name="label" translatable="yes">gk_Harpsichord_pick</property>
+            <property name="label" translatable="yes">Harpsichord pick</property>
           </object>
           <packing>
             <property name="left_attach">0</property>
@@ -192,7 +189,7 @@
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="halign">start</property>
-            <property name="label" translatable="yes">gk_Harpsichord_reflection</property>
+            <property name="label" translatable="yes">Harpsichord reflection</property>
           </object>
           <packing>
             <property name="left_attach">0</property>
@@ -201,11 +198,10 @@
         </child>
         <child>
           <object class="GtkLabel">
-            <property name="name">gk_Harpsichord_pluck</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="halign">start</property>
-            <property name="label" translatable="yes">gi_Harpsichord_pluck</property>
+            <property name="label" translatable="yes">Harpsichord pluck</property>
           </object>
           <packing>
             <property name="left_attach">0</property>
@@ -214,11 +210,10 @@
         </child>
         <child>
           <object class="GtkLabel">
-            <property name="name">gk_Harpsichord_pan</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="halign">start</property>
-            <property name="label" translatable="yes">gk_Harpsichord_pan</property>
+            <property name="label" translatable="yes">Harpsichord pan</property>
           </object>
           <packing>
             <property name="left_attach">0</property>
@@ -227,11 +222,10 @@
         </child>
         <child>
           <object class="GtkLabel">
-            <property name="name">gk_Harpsichord_level</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="halign">start</property>
-            <property name="label" translatable="yes">gk_Harpsichord_level</property>
+            <property name="label" translatable="yes">Harpsichord  output level</property>
           </object>
           <packing>
             <property name="left_attach">0</property>
@@ -435,5 +429,10 @@
         </child>
       </object>
     </child>
+  </object>
+  <object class="GtkAdjustment" id="adjustment9">
+    <property name="upper">100</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
   </object>
 </interface>
